crates/math-core/tests/snapshots/error_test__mkern_text_unit.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\mkern1em y"
---
Error: Text unit "em" cannot be used with \mkern/\mskip.
   ╭─[ <input>:1:9 ]
   │
 1 │ x\mkern1em y
   │         ─┬  
   │          ╰── illegal unit here
───╯
